# finance-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  project_tree.md  pyproject.toml  setup.sh
.agents/: AGENTS.md  (+1 more)
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0928f55e70bf_make_username_and_email_case_insensitive.py  26c925e73ae5_initial_migration.py  27f14f1f99dc_init.py  39a7b2c8d1e4_add_composite_indexes_for_etag.py  4e8f6a2b9c1d_add_composite_index_user_type_date.py  568cdd435c62_add_soft_delete_fields_to_categories.py  5ea4b1d9a612_add_currency_to_users.py  6b2f1c3d8e4f_add_currency_custom_symbol_to_users.py  6d5c4b3a2f1e_add_composite_index_monthly_account.py  7c5bae8afa9a_add_user_tokens_table.py  7e6d5c4b3a2f_add_composite_index_category_spending.py  8f7e6d5c4b3a_add_composite_index_transactions_cursor.py  9d039e81b1fc_add_adjustment_to_transaction_type_enum.py  a1b2c3d4e5f6_add_system_to_category_type_enum.py  cfd8f3b80f6e_initial_migration.py  e2c5b8f1a3d4_rename_business_meals_to_bank_charges.py  f1ea8b784ecb_accounts_field_deleted.py  f9504b1577ca_add_to_account_id_for_transfers_make_.py
backend/app/: base.py  db.py  main.py  models.py  seed.py
backend/app/accounts/: model.py  models.py  repository.py  route.py  router.py  schema.py  schemas.py  service.py  services.py
backend/app/api/v1/: api.py
backend/app/categories/: defaults.py  model.py  models.py  repository.py  route.py  router.py  schema.py  schemas.py  service.py  services.py
backend/app/core/: base.py  cache.py  config.py  database.py  db.py  dependencies.py  email.py  enums.py  exceptions.py  health.py  models.py  security.py
backend/app/reports/: repository.py  route.py  schema.py  service.py
backend/app/transactions/: exceptions.py  model.py  models.py  repository.py  route.py  router.py  schema.py  schemas.py  service.py  services.py
backend/app/users/: auth.py  model.py  models.py  repository.py  route.py  schema.py  service.py  token_model.py  token_repo.py
backend/tests/: conftest.py  test_auth.py  test_db.py  test_security.py
(+64 files in other folders)
