[project]
name = "fastapi-finance-app"
version = "0.1.0"
description = "A fullstack personal finance app for simple people like us and (Forrest Gump ofc!)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "backend",
]

[dependency-groups]
dev = []
